[workspace]
resolver = "3"
members = [
    "bokchoy",
    "jidan",
    "kufang"
]

[workspace.dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid" ] }
uuid = { version = "1.18", features = ["v7", "serde"] }
sea-orm-migration = { version = "~2.0.0-rc", features = [ "runtime-tokio-rustls", "sqlx-postgres" ] }
async-trait = "0.1.89"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde_json = "1.0"
serde = "1"
http = "1.4"

rsa = { version = "0.9.8", features = ["sha2"] }
sha2 = "0.10.9"
pem = "3"
time = "0.3"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = [ "rustls-tls", "http2" , "json" ] }
rand = "0.8"
aes-gcm = "0.10.3"

utoipa = "5"
