[package]
name = "bokchoy"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
rsa = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
http = { workspace = true }
pem = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }

sea-orm-migration = { workspace = true }
async-trait = { workspace = true }

tokio = { workspace = true }
bytes = "1.11.0"
