[package]
name = "jidan"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm-migration = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
time.workspace = true
serde_json.workspace = true
serde.workspace = true

utoipa = { workspace = true, optional = true }

[features]
utoipa = ["dep:utoipa"]
