[package]
name = "kufang"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
uuid = { version = "1.18", features = ["v7", "serde"] }
time = "0.3"
base64 = "0.22"
regex = "1.12"
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid" ] }
reqwest = { version = "0.12", default-features = false, features = [ "rustls-tls", "http2" , "json" ] }
rsa = { version = "0.9.8", features = ["sha2"] }
md-5 = { version = "0.10.6", features = ["oid"] }
serde = "1"

sea-orm-migration = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
