[package]
name = "kufang"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
uuid = { workspace = true }
time = { workspace = true }
base64 = { workspace = true }
regex = "1.12"
reqwest = { workspace = true }
rsa = { workspace = true }
md-5 = { version = "0.10.6", features = ["oid"] }

serde_json = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
http = { workspace = true }

sea-orm-migration = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
